--- a/dw_characters.html
+++ b/dw_characters.html
@@ -27,7 +27,7 @@
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
                         <div class="mbr-navbar__column">
                           <ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links">
-                            <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="dw_index.html">BACK</a></li>  
+                            <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="dw_index.html">BACK</a></li>
                             <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html">HOME</a></li>
                           </ul></div>
 
@@ -43,7 +43,26 @@
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
                 <h3 class="mbr-header__text">Characters</h3>
-
+                <h6 class="mbr-header__text">Baldric</h6>
+                <p class="mbr-header__subtext">
+                  Race: Human
+                  Alignment: Chaotic
+                </p>
+                <h6 class="mbr-header__text">Thrandian Stagfire III of Videnheim</h6>
+                <p class="mbr-header__subtext">
+                  Race: Human
+                  Alignment: Neutral
+                </p>
+                <h6 class="mbr-header__text">Amenadiel</h6>
+                <p class="mbr-header__subtext">
+                  Race: Human
+                  Alignment: Neutral
+                </p>
+                <h6 class="mbr-header__text">Kronk</h6>
+                <p class="mbr-header__subtext">
+                  Race: Halfling
+                  Alignment: Neutral
+                </p>
             </div>
         </div>
     </div>
