--- a/dw_characters.html
+++ b/dw_characters.html
@@ -45,23 +45,31 @@
                 <h3 class="mbr-header__text">Characters</h3>
                 <h6 class="mbr-header__text">Baldric</h6>
                 <p class="mbr-header__subtext">
-                  Race: Human\n
-                  Alignment: Chaotic
+                  Race: Human<br>
+                  Alignment: Chaotic<br>
+                  Level: 2<br>
+                  XP: 0
                 </p>
                 <h6 class="mbr-header__text">Thrandian Stagfire III of Videnheim</h6>
                 <p class="mbr-header__subtext">
-                  Race: Human\n
-                  Alignment: Neutral
+                  Race: Human<br>
+                  Alignment: Neutral<br>
+                  Level: 1<br>
+                  XP: 6
                 </p>
                 <h6 class="mbr-header__text">Amenadiel</h6>
                 <p class="mbr-header__subtext">
-                  Race: Human\n
-                  Alignment: Neutral
+                  Race: Human<br>
+                  Alignment: Neutral<br>
+                  Level: 1<br>
+                  XP: 6
                 </p>
                 <h6 class="mbr-header__text">Kronk</h6>
                 <p class="mbr-header__subtext">
-                  Race: Halfling\n
-                  Alignment: Neutral
+                  Race: Halfling<br>
+                  Alignment: Neutral<br>
+                  Level: 1<br>
+                  XP: 5
                 </p>
             </div>
         </div>
