--- a/dw_log.html
+++ b/dw_log.html
@@ -52,9 +52,23 @@
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">Title</h3>
+                <h3 class="mbr-header__text">Session 1 - Bandit Camp</h3>
                 <p class="mbr-header__subtext">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In metus ex, porttitor quis nisl ac, finibus tempor libero. Sed id eros eros. Proin ac arcu mi. Sed eu efficitur justo, pellentesque ultrices ex. Maecenas iaculis massa accumsan, semper augue ut, faucibus ligula. Sed sed mauris quis massa sollicitudin gravida. Donec eros velit, elementum sit amet malesuada convallis, cursus vitae urna. Maecenas vel mauris nec augue sagittis elementum vel ut sapien. Ut blandit massa vel pulvinar mattis. Aenean consectetur enim eu magna sodales dignissim. Sed a lobortis tortor, nec sagittis enim. Nunc interdum est eget ante euismod egestas.
+                  Notable enemies defeated: Gorthag the Great, Gorthag the Godly, Dave the Bandit King<br>
+                  Notable loot obtained: Tricksy rope, 500 coin<br>
+                  On a quest to rescue Baldric's stolen mandolin (a mandolin that was passed down to him by a
+                  long family line of unsucceful bards), our heroes tracked the culprits to a cave inhabited by bandits.
+                  Inside they fought bandits lead by Gorthag the Great, a spear and dagger weilding warrior. Gorthag the
+                  Great was killed by Kronk; Kronk shot Gorthag in the eye while doing a backflip.<br>
+                  Further in the cave the heroes encountered Gorthag's brother, Gorthag the Godly. Kronk eliminated Gorthag
+                  by knocking him into the dark rushing waters below from a narrow rock bridge, after Gorthag got himself
+                  into the situation where he was hanging onto Baldric's legs for dear life. Baldric himself was hanging onto
+                  Thrandian, who was in turn hanging onto the ledge of the bridge.<br>
+                  Finally the heroes defeated Dave the Bandit King, by shooting him in the gut, headbutting him as a goat, and then
+                  chopping off his head. Dave had believed that Baldric's mandolin was magical (it's not) and had it stolen, so it was
+                  here where Baldric was reunited with his mandolin (as well as 500 coin).<br>
+                  We last left our heroes heading to the lake town of Lamora, to rest and sell a wagon full of salted beef and fish.
+                
                 </p>
             </div>
         </div>
