added gold to baldric to test no cache

--- a/dw_characters.html
+++ b/dw_characters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+
   <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
   <meta http-equiv="expires" content="Sat, 31 Oct 2014 00:00:00 GMT">
   <meta http-equiv="pragma" content="no-cache">
@@ -59,7 +59,8 @@
                   Race: Human<br>
                   Alignment: Neutral<br>
                   Level: 1<br>
-                  XP: 6
+                  XP: 6<br>
+                  Current Gold: 128
                 </p>
                 <h6 class="mbr-header__text">Amenadiel</h6>
                 <p class="mbr-header__subtext">
