added coin to all players

--- a/dw_characters.html
+++ b/dw_characters.html
@@ -52,7 +52,8 @@
                   Race: Human<br>
                   Alignment: Chaotic<br>
                   Level: 2<br>
-                  XP: 0
+                  XP: 0<br>
+                  Current coin: 128
                 </p>
                 <h6 class="mbr-header__text">Thrandian Stagfire III of Videnheim</h6>
                 <p class="mbr-header__subtext">
@@ -60,21 +61,23 @@
                   Alignment: Neutral<br>
                   Level: 1<br>
                   XP: 6<br>
-                  Current Gold: 128
+                  Current coin: 147
                 </p>
                 <h6 class="mbr-header__text">Amenadiel</h6>
                 <p class="mbr-header__subtext">
                   Race: Human<br>
                   Alignment: Neutral<br>
                   Level: 1<br>
-                  XP: 6
+                  XP: 6<br>
+                  Current coin: 125
                 </p>
                 <h6 class="mbr-header__text">Kronk</h6>
                 <p class="mbr-header__subtext">
                   Race: Halfling<br>
                   Alignment: Neutral<br>
                   Level: 1<br>
-                  XP: 5
+                  XP: 5<br>
+                  Current coin: 135
                 </p>
             </div>
         </div>
