added inventory to players

--- a/dw_characters.html
+++ b/dw_characters.html
@@ -47,37 +47,48 @@
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
                 <h3 class="mbr-header__text">Characters</h3>
-                <h6 class="mbr-header__text">Baldric</h6>
+                <h6 class="mbr-header__text">Baldric - Bard</h6>
                 <p class="mbr-header__subtext">
                   Race: Human<br>
                   Alignment: Chaotic<br>
                   Level: 2<br>
                   XP: 0<br>
-                  Current coin: 128
+                  Current coin: 128<br>
+                  Current load/Max load: 6/21<br>
+                  Inventory: mandolin (0), dungeon rations, 5 uses (1), leather armour (1), worn bow (2), bundle of arrows (1),
+                  short sword (1)
                 </p>
-                <h6 class="mbr-header__text">Thrandian Stagfire III of Videnheim</h6>
+                <h6 class="mbr-header__text">Thrandian Stagfire III of Videnheim - Fighter</h6>
                 <p class="mbr-header__subtext">
                   Race: Human<br>
                   Alignment: Neutral<br>
                   Level: 1<br>
                   XP: 6<br>
-                  Current coin: 147
+                  Current coin: 147<br>
+                  Current load/Max load: 9/28<br>
+                  Inventory: signiture sword (2), Gorthag's shield (2), scale armour (2), 2 X dungeon rations, 5 uses (2 X 1),
+                   antitoxin (0), poultices and herbs, 1 use (1)
                 </p>
-                <h6 class="mbr-header__text">Amenadiel</h6>
+                <h6 class="mbr-header__text">Amenadiel - Druid</h6>
                 <p class="mbr-header__subtext">
                   Race: Human<br>
                   Alignment: Neutral<br>
                   Level: 1<br>
                   XP: 6<br>
-                  Current coin: 125
+                  Current coin: 125<br>
+                  Current load/Max load: 3/19<br>
+                  Inventory: hide armour (1), staff (1), adventuring gear (1)
                 </p>
-                <h6 class="mbr-header__text">Kronk</h6>
+                <h6 class="mbr-header__text">Kronk - Thief</h6>
                 <p class="mbr-header__subtext">
                   Race: Halfling<br>
                   Alignment: Neutral<br>
                   Level: 1<br>
                   XP: 5<br>
-                  Current coin: 135
+                  Current coin: 135<br>
+                  Current load/Max load: 7/22<br>
+                  Inventory: tricksy rope (0), dagger (1), dungeon rations, 5 uses (1), leather armour (1), short sword (1),
+                  3 X poison (0), ragged bow (2), bundle of arrows (1), healing potion (0)
                 </p>
             </div>
         </div>
